# Citazio.Net

./: .gitignore  README.md
.github/: dependabot.yml
database/: .gitignore  functions.sql  gen.sql  procedures.sql  schedules.sql  tables.sql  test.sql  views.sql
docs/: INSTALL.md
frontend/: .gitignore  about.html  authenticate.html  index.html  package-lock.json  package.json  signin.html  signup.html  tailwind.config.js
frontend/scripts/: tailwind.config.js  year.js
frontend/src/: App.vue  main.js
frontend/styles/: colours.css  layout.css  style.css
server/: .gitignore  add_tokens.js  app.js  db_setup.js  package-lock.json  package.json  pnpm-lock.yaml  server.js
server/config/: default.toml  rename_as_default.toml
server/plugins/: common_schemas.js  database.js  headers.js  helmet.js  quote_filter.js  rate_limit.js  session.js  static.js  turnstile.js
server/routes/: add_board.js  add_quote.js  add_user_to_board.js  do_abandon.js  do_login.js  do_logout.js  do_signin.js  do_signout.js  do_signup.js  get_board_info.js  get_board_quotes.js  get_board_quotes_limited.js  get_board_users.js  get_boards.js  get_quotes.js  get_session_validity.js  remove_board.js  remove_quote.js  remove_user_from_board.js  root.js  transfer_board.js  update_board.js  update_board_owner.js  update_quote.js  update_user_on_board.js  update_user_password.js  update_user_uname.js
server/test/: helper.js
server/theysaid/: README.md  package-lock.json  package.json
svelte-frontend/: package-lock.json  package.json
svelte-frontend/src/: app.html
svelte-frontend/static/: colors.css  style.css
theysa_rocket/: Cargo.toml  config.toml
theysa_rocket/src/: handlers.rs  main.rs
theysa_rocket/src/app_config/: cfg_file.rs  cli_args.rs  mod.rs
web-node/: package.json  server.js
web-node/config/: default.toml
web-node/plugins/: common_schemas.js  database.js  headers.js  session.js  (+1 more)
webserver/: Cargo.toml  Config.toml  config.toml  sqlx-data.json  todo.md
webserver.bak/: Config.toml
webserver/assets/styles/: style.css
webserver/src/: cfg_file.rs  database.rs  handlers.rs  main.rs  parser.rs  password.rs  session.rs  test.json  test.toml
webserver/src/app_config/: cfg_file.rs  cli_args.rs  mod.rs
webserver/src/db_wrapper/: mod.rs  pool.rs
webserver/src/handlers/: authentication.rs  mod.rs
webserver/src/router/: mod.rs
webserver/src/router/api/: authentication.rs
webserver/src/router/legacy/: auth_page.rs  home.rs  mod.rs
webserver/templates/: authenticate.html  base.html  board_card.html  index.html
(+98 files in other folders)
