[package]
name = "theysa_rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.1", features = ["runtime-tokio-native-tls" , "mysql", "offline"] }
toml = "0.5.9"
clap = { version = "*", features = ["derive"] }
url = { version = "2.3.1", features = ["serde"] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }