[package]
name = "theysaid"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.5", features = ["form"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.21", features = ["full"] }
tower = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
toml = "0.5.9"
clap = { version = "*", features = [ "derive" ] }
url = { version = "2.3.1", features = ["serde"] }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }